--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,6 +424,7 @@
 .header__mobile-search-icon{
     font-size: 2.6rem;
     color: var(--white-color);
+    display: none;
 }
 .header__logo{
     width: 200px;
